Manual site updade.

--- a/localisation.html
+++ b/localisation.html
@@ -40,7 +40,7 @@
 
 <div id="main">
     <div class="content">
-        <h1 id="programme-1">Programme</h1>
+        <h1 id="localisation-des-rencontres-1">Localisation des rencontres</h1>
     </div> <!-- /content -->
 </div> <!-- /main -->
 
