--- a/riscv-v1.html
+++ b/riscv-v1.html
@@ -40,7 +40,17 @@
 
 <div id="main">
     <div class="content">
-        <h1 id="programme-1">Programme</h1>
+        <h1 id="premières-rencontres-risc-v-1">Premières rencontres RISC-V</h1>
+<p>Jeudi 23 mai 2019, Minatec, Grenoble</p>
+<h2 id="description">Description</h2>
+<p>Cette journée s’inscrit dans la suite de la journée <a href="https://lazart.gricad-pages.univ-grenoble-alpes.fr/sertif/pages/workshop.html">SERTIF</a> organisée en 2016 à Grenoble, puis de la journée <a href="https://wp-systeme.lip6.fr/jaif">JAIF</a> organisée en 2018 à Paris.</p>
+<p>Cette journée thématique est associée au GT Sécurité des Systèmes Matériels, qui est commun au <a href="http://www.gdr-soc.cnrs.fr">GdR SOC2</a> et au <a href="https://gdr-securite.irisa.fr">GdR Sécurité Informatique</a>.</p>
+<p>
+<a href="http://www.cea-tech.fr">
+<img src="./media/logo_CEA.png" alt="Logo CEA" title="CEA" data-align="center" height="100" /></a>
+
+</p>
+
     </div> <!-- /content -->
 </div> <!-- /main -->
 
